actualizando información en proyecto y publicaciones

--- a/index.qmd
+++ b/index.qmd
@@ -49,7 +49,7 @@ En este sitio hay una lista de publicaciones [publicaciones](https://vyorojo.rbi
 
 ## Competencias profesionales
 
-#### Dominio Experto en Acuicultura, Ictiología y Gestión de Ecosistemas Acuáticos
+#### Experto en Acuicultura, Ictiología y Gestión de Ecosistemas Acuáticos
 
 - **Manejo Ex Situ de Colecciones Acuáticas:** Coordinación integral de colecciones de peces e invertebrados (agua dulce y marinos) en entornos de exhibición y cuarentena, basado en protocolos de conservación.
 - **Control Fisicoquímico Avanzado:** Monitoreo de parámetros de calidad de agua utilizando espectrofotometría y técnicas electroquímicas.
