--- a/proyectos/index.qmd
+++ b/proyectos/index.qmd
@@ -4,15 +4,35 @@ title: "Participación en proyectos"
 
 En esta sección presento proyectos de investigación aplicada en los que he participado.
 
-## Colaboraciones técnicas y campañas de Campo
+
+## Colaboraciones técnicas y campañas de campo
 
 
 #### 🚢 **Caracterización biológica y ecológica de una laguna pampeana**
 
 * **Proyecto marco:** relevamiento ambiental e ictiológico de laguna Chís Chís.
-* **Rol:** miembro del equipo de campo. **Contribución:** recolección en campo de muestras de peces y zooplancton y en la documentación de parámetros biológicos para el análisis poblacional y pesquero. 
-* **Habilidad clave:** cuantificación, determinación taxonómica de zooplancton. Analisis estadístico en software R. 
-* **Documento de referencia:** [Informe Técnico]. [Enlace](https://si.conicet.gov.ar/eva/archivosAdjuntos.do?archivo=fullText&elementoId=12614808)
+* **Rol:** miembro del equipo de campo. **Contribución:** recolección en campo de muestras de peces y zooplancton. Documentación de parámetros biológicos para el análisis poblacional y pesquero. 
+* **Habilidad clave:** evaluación de zooplancton en cuerpos de agua. Análisis estadístico en software R. 
+
+---
+
+
+#### 🚢 **Proyecto producción de juveniles en la laguna Chis chis**
+
+* **Proyecto marco:** producción masiva de juveniles de pejerrey (Odontesthes bonariensis) utilizando jaulas flotantes en lagunas del partido de Lezama, Provincia de Buenos Aires.
+* **Rol:** miembro del equipo de campo. **Contribución:** miembro responsable del proceso de implementación del cultivo. 
+* **Habilidad clave:** técnicas de acuicultura ecológica en jaulas flotantes. 
+
+
+---
+
+
+#### 🚢 **Estudio limnológico del Embalse del Rio III**
+
+* **Proyecto marco:**  Estudio limnológico del Embalse del Rio III, Córdoba (Argentina). Contrato nucleoeléctrica Argentina SA.-ILPLA, FCNyM, UNLP – CONICET Ref.: N.A.S.A. OC Nº 4500119836
+* **Rol:** miembro del equipo trabajo. **Contribución:** determinación taxonómica, cuantificación, análisis y presentación de informe. 
+* **Habilidad clave:** evaluación de zooplancton en cuerpos de agua. Manejo de software R. 
+
 
 
 ---
@@ -26,19 +46,33 @@ En esta sección presento proyectos de investigación aplicada en los que he par
 
 ---
 
-#### 🔬 **Caracterización biológica y ecológica de una laguna pampeana**
 
-* **Proyecto marco:** Estudio ictiológico y limnológico de la laguna San Lorenzo.
-* **Rol:**  Miembro del equipo de campo. **Contribución 1:** recolección en campo de muestras de peces y zooplancton, y en la documentación de parámetros biológicos para el análisis poblacional y pesquero. **Contribución 2:** cuantíficación y determinación taxonómica de zooplancton. 
-* **Habilidad clave:** Determinación taxonómica de zooplancton. 
-* **Documento de referencia:** [Informe Técnico]. [Enlace](https://si.conicet.gov.ar/eva/archivosAdjuntos.do?archivo=fullText&elementoId=12742476)
+
+#### 🔬 **Caracterización limnológica de una laguna pampeana**
+
+* **Proyecto marco:** Estudio limnológico de la laguna De Bragado.
+* **Rol:**  análisis de muestras de zooplancton. **Contribución:** cuantíficación y determinación taxonómica de zooplancton. 
+* **Habilidad clave:** evaluación de zooplancton en cuerpos de agua. 
+
 
 ---
 
+
+
+#### 🔬 **Caracterización biológica y ecológica de una laguna pampeana**
+
+* **Proyecto marco:** Estudio ictiológico y limnológico de la laguna San Lorenzo.
+* **Rol:**  miembro del equipo de campo. **Contribución 1:** recolección en campo de muestras de peces y zooplancton, y en la documentación de parámetros biológicos para el análisis poblacional y pesquero. **Contribución 2:** cuantíficación y determinación taxonómica de zooplancton. 
+* **Habilidad clave:** evaluación de zooplancton en cuerpos de agua. 
+
+---
+
+
+
 #### 🔬 **Taller de determinación de edades en peces (otolitometría aplicada)**
 
-* **Proyecto marco:** "Evaluación de los recursos ícticos del bajo río Uruguay y del Río de la Plata Interior" (CARU-CARP).
-* **Rol:** Participación activa en el **IV Taller de preparación y lectura de otolitos**. **Contribución:** responsable de la determinación de edades en ejemplares de peces, contribuyendo directamente a la evaluación demográfica y pesquera del recurso ictícola regional.
+* **Proyecto marco:** evaluación de los recursos ícticos del bajo río Uruguay y del Río de la Plata Interior (CARU-CARP).
+* **Rol:** participación activa en el IV Taller de preparación y lectura de otolitos. **Contribución:** responsable de la determinación de edades en ejemplares de peces, actividad que está directamente vinculada a la evaluación demográfica y pesquera del recurso ictícola regional.
 * **Habilidad clave:** Técnicas de preparación y lectura de otolitos (Otolitometría).
 * **Documento de referencia:** [Informe Técnico Campaña Invierno 2016]. [Enlace](https://www.magyp.gob.ar/sitio/areas/pesca_continental/informes/proyectos_caru/_archivos/000000_Informes%20Proyectos%20CARU/180227_Informe%20CARU-CARP%20Campa%C3%B1a%20de%20Invierno%202016.pdf)
 
