ingrese libro de resumenes del congreso de micribiologia

--- a/proyectos/index.qmd
+++ b/proyectos/index.qmd
@@ -2,7 +2,7 @@
 title: "Participación en proyectos"
 ---
 
-En esta sección presento proyectos de investigación aplicada en los que he participado.
+En esta sección presento algunos proyectos de investigación aplicada en los que he participado. 
 
 
 ## Colaboraciones técnicas y campañas de campo
