--- a/publicaciones/index.qmd
+++ b/publicaciones/index.qmd
@@ -39,7 +39,11 @@ lagunas pampeanas. XI Congreso de Ecología y Manejo de Ecosistemas Acuáticos P
 
 #### 2021
 
-- Garcia de Souza, J. R., **Yorojo Moreno, V.**, Sathicq, M. B., Gómez, N., Sampietro, S., Donadelli, J., & Colautti, D. C. (2021). The performance of ecological cage aquaculture of pejerrey Odontesthes bonariensis in Pampean lakes under two different hydrological scenarios. Aquaculture Research, 52(10), 4829-4840. [Enlace](https://onlinelibrary.wiley.com/doi/abs/10.1111/are.15316)
+- Garcia de Souza, J. R., **Yorojo Moreno, V.**, Sathicq, M. B., Gómez, N., Sampietro, S., Donadelli, J., & Colautti, D. C. 2021. The performance of ecological cage aquaculture of pejerrey Odontesthes bonariensis in Pampean lakes under two different hydrological scenarios. Aquaculture Research, 52(10), 4829-4840. [Enlace](https://onlinelibrary.wiley.com/doi/abs/10.1111/are.15316)
+
+
+- JUAN PABLO NOGUEIRAS, SANTIAGO EMANUEL COLINA, NICOLÁS NAHUEL CASTRO, **VIVIAN YOROJO MORENO**, MARÍA SOLEDAD SERENA, MARÍA GABRIELA ECHEVERRÍA Y GERMÁN ERNESTO METZ. 2021. Cultivos celulares primarios de células de pejerrey (Odontesthes bonariensis) para su uso como sustratos en el estudio de virus de interés ictícola. En libro de resúmenes Congreso de Microbiología Veterinaria. Presente y futuro de la Microbiología en Medicina Veterinaria en el marco de "Una Salud". [PDF](https://www.aavld.org.ar/publicaciones/LIBRO-DE-RESUMENES-I-CMV-2021.pdf)
+
 
 
 #### 2019
