complete el primer blog sobre trayectoria

--- a/proyectos/index.qmd
+++ b/proyectos/index.qmd
@@ -2,7 +2,7 @@
 title: "Participación en proyectos"
 ---
 
-En esta sección presento algunos proyectos de investigación aplicada en los que he participado. 
+En esta sección se encuentran algunos proyectos de investigación aplicada en los que he participado. Los documentos que están publicados en internet tienen enlace. 
 
 
 ## Colaboraciones técnicas y campañas de campo
