--- a/index.qmd
+++ b/index.qmd
@@ -28,7 +28,7 @@ Investigadora y Consultora especializada en **Ecohidrología y Acuicultura Suste
 
 Utilizo la academia, la práctica, la experimentación y mi interés autodidacta como herramientas de aprendizaje para profundizar mi formación como profesional. Cuento con una **licenciatura en biología y química**, una **maestría en ecohidrología** y actualmente estoy realizando el **doctorado en ciencias naturales** sobre la implementación de la acuicultura ecológica de una especie nativa. 
 
-En este sitio hay una lista de publicaciones [publicaciones](https://vyorojo.rbind.io/publicaciones/), [CV](https://vyorojo.rbind.io/cv.pdf),   
+En este sitio encontraras algo sobre mi trayectoria [publicaciones](https://vyorojo.rbind.io/publicaciones/), [proyectos](https://vyorojo.rbind.io/cv.pdf).   
 
 
 
