--- a/posts/2025-11-cv/index.qmd
+++ b/posts/2025-11-cv/index.qmd
@@ -1,45 +1,47 @@
 ---
 title: "De los zoológicos a la acuicultura"
 description: "Reflexiones sobre dos décadas de experiencia en biología, conservación de fauna y manejo de sistemas acuáticos"
-author: "Vivian Yorojo Moreno"
-date: "11/01/2025"
+date: "10/30/2025"
 categories:
   - trayectoria
   - conservación
   - acuarios
   - ecohidrología
+  - acuacultura
 ---
 
 
 
-![Mi pasión por los sistemas acuáticos nació en el Zoológico de Cali y continúa hoy en la investigación ecohidrológica en Argentina. \label{figurelabel}](salta1.png){fig.aling="right" width=30%}
+![Mi pasión por los ecosistemas acuáticos nació en el Zoológico de Cali y continúa hoy en la acuicultura en Argentina. \label{figurelabel}](salta1.png){fig.aling="right" width=30%}
 
 
 
-Hace exactamente 30 años, mientras completaba mi bachillerato comercial en el Instituto Nacional de Enseñanza Media Diversificada INEM "Jorge Isaacs" de Cali, nunca imaginé que mi futuro profesional estaría tan profundamente entrelazado con la conservación de la vida silvestre y los sistemas acuáticos. 
+Hace exactamente 30 años, mientras completaba mi bachillerato comercial en el Instituto Nacional de Enseñanza Media Diversificada INEM "Jorge Isaacs" de Cali, no imaginé que mi futuro profesional estaría tan profundamente entrelazado con la conservación de la fauna y los ecosistemas acuáticos. 
 
 >Todo comenzó de manera casual, como suelen comenzar las grandes pasiones.
 
-Lo que inició como un rol administrativo en la Clínica Veterinaria del Zoológico de Cali, se transformó rápidamente en mi verdadera educación en **manejo de fauna silvestre y bienestar animal**. 
+Lo que inició como un rol administrativo en la Clínica Veterinaria del Zoológico de Cali se transformó rápidamente en mi verdadera educación en **manejo de fauna y bienestar animal**. 
 
-Durante seis años no solo me encargué de la transcripción de historias clínicas de animales silvestres (desde leones y tigrillos hasta aves nocturnas y reptiles). Sino que me sumergí en un mundo que cambiaría el rumbo de mi vida profesional. 
+Durante seis años no solo me encargué de la transcripción de historias clínicas de los animales (desde leones y tigrillos hasta aves nocturnas y reptiles), sino que me sumergí en un mundo que cambiaría el rumbo de mi vida profesional. 
 
-El manejo de las historias clínicas y el cuidado de la fauna a mi cargo, me dio una comprensión profunda del manejo ex situ y la complejidad de la conservación en cautiverio.
+El manejo de las historias clínicas y el cuidado de la fauna a mi cargo me dieron una comprensión profunda del manejo _ex situ_ y la complejidad de la conservación en cautiverio.
 
  >Esta base operativa fue el catalizador que impulsó mi especialización.
 
 
 ## Los fundamentos en el Zoológico
 
-Mi trabajo diario me llevó a desarrollar habilidades que trascienden el simple manejo administrativo. Aprendí a preparar dietas especializadas, a realizar controles de peso y medidas, y hasta a manejar bases de radio de comunicación. 
+Mi trabajo diario me llevó a desarrollar habilidades que trascienden el simple manejo administrativo. Aprendí a preparar dietas especializadas, a realizar medidas y controles de peso, y hasta a manejar bases de radio de comunicación. 
 
 >Pero lo más importante fue que desarrollé una comprensión profunda del bienestar animal y la importancia de la conservación.  
 
-Durante este período, también tuve la oportunidad de coordinar las actividades de los cuidadores (zookeepers), lo que me dió una perspectiva integral sobre el manejo de fauna en cautiverio. Cada especie que se encontraba en este lugar me enseñó algo nuevo sobre adaptación, supervivencia y necesidades complejas.
+Durante este período, también tuve la oportunidad de coordinar las actividades de los cuidadores (zookeepers), lo que me dio una perspectiva integral sobre el manejo en cautiverio. 
+
+>Cada especie me enseñó algo nuevo sobre adaptación, supervivencia y necesidades complejas.
 
 ## Hacia la coordinación del acuario
 
-En noviembre de 2001, se abrió una nueva puerta cuando asumí como Coordinadora del Acuario. Este cambio representó un desafío enorme que requirió no solo pasión, si no una serie de conocimientos técnicos para gestionar la colección de peces e invertebrados de agua dulce y marinos.
+En noviembre de 2001, se abrió una nueva puerta cuando asumí como Coordinadora del Acuario. Este cambio representó un desafío enorme que requirió no solo pasión, sino una serie de conocimientos técnicos para gestionar la colección de peces e invertebrados de agua dulce y marinos.
 
 La responsabilidad era abrumadora: nueve exhibiciones de agua dulce (incluyendo acuarios de hasta 40 metros cúbicos), once exhibiciones marinas, dos lagos de biodiversidad, y un complejo sistema de cuarentenas. 
 
@@ -47,39 +49,41 @@ La responsabilidad era abrumadora: nueve exhibiciones de agua dulce (incluyendo 
 
 ## La ciencia detrás de los acuarios
 
-Varios aspectos marcaron mis experiencia en el acuario. La importancia de la evaluación de la calidad de agua para el sostenimiento de la vida de los organismos acuáticos. Está actividad se convirtiò en una rutina diaría que marcó la diferencia entre el éxito y el fracaso en el mantenimiento de ecosistemas acuáticos complejos. 
+Varios aspectos marcaron mi experiencia en el acuario. La importancia de la evaluación de la calidad de agua para el sostenimiento de la vida acuática, esta actividad se convirtió en una rutina diaria que marcó la diferencia entre el éxito y el fracaso en el mantenimiento de ecosistemas acuáticos complejos. 
 
-El cuidado de los peces e invertebrados me enseño que hay especies que se adaptan mejor a la manipulación y que a otras esta intervención les afecta, lo que conlleva a situaciones de estréss que deben ser resueltas.
+>El cuidado de los peces e invertebrados me enseñó que hay especies que se adaptan mejor a la manipulación y que a otras, esta intervención les afecta, lo que conlleva a situaciones de estrés que deben ser resueltas.
 
-Aprendí que la preparación de sales para exhibiciones marinas no es simplemente una cuestión de seguir una receta, sino que requiere un entendimiento profundo de las necesidades específicas de cada especie. 
+>Aprendí que la preparación de sales para las exhibiciones marinas no es simplemente una cuestión de seguir una receta, sino que requiere un entendimiento profundo de las necesidades específicas de cada especie. 
 
 La consecución de peces de agua dulce implicó desarrollar relaciones con pescadores artesanales del Río Cauca y la Laguna de Sonso, así como coordinar con el Museo de Ciencias Naturales del Valle del Cauca (INCIVA).
 
 ## La investigación como motor del cambio
 
-Mi paso por el Zoológico de Cali estuvo lleno de aprendizajes. En 2001, colaboré en la investigación sobre el manejo y reproducción del cóndor andino. 
+Mi paso por el Zoológico de Cali estuvo lleno de aprendizajes. En 2001, colaboré en la investigación sobre la cría en cautiverio del Cóndor de los Andes "Yacaira", que posteriormente se convertiría en un documental. 
 
 >Esta experiencia me abrió los ojos al poder de la investigación aplicada en conservación. 
 
-En el acuario asesoré el trabajo sobre "Metodologías de Manejo en Cautiverio de Especies Ornamentales" el cual ayudó a transformar mi perspectiva profesional. 
+En el acuario asesoré un primer trabajo sobre "metodologías de manejo en cautiverio de especies ornamentales", el cual ayudó a transformar mi perspectiva profesional. 
 
-Participé en programas sobre comunicación de la ciencia a través de mi participación en el programa educativo "Exploradores por Naturaleza" y contribuí con algunas publicaciones en el "Zooletin".
+Participé en áreas relacionadas con la comunicación de la ciencia a través de mi participación en el programa televisivo "Exploradores por Naturaleza" y contribuí con algunas publicaciones sobre animales en el "Zooletin" (publicación trimestral de la FZC).
 
 >Actividades con las que comprendí lo importante que es la comunicación científica. 
 
 
-## La expansión internacional de conocimientos
+## El aprendizaje en otros lugares
 
-Mi compromiso con el aprendizaje continuo me llevó a participar en entrenamientos internacionales. Tuve la oportunidad de formarme en el Dallas World Aquarium, donde aprendí técnicas avanzadas de manejo de acuarios marinos y sistemas de cuarentena. Posteriormente, en el Shedd Aquarium de Chicago, profundicé mis conocimientos en sistemas marinos.
+>Mi compromiso con el aprendizaje continuo me llevó a participar en entrenamientos en el Dallas World Aquarium y Shedd Aquarium, donde conocí técnicas avanzadas de mantenimiento de acuarios, sistemas de filtración y cuarentenas.
 
 
 ## De los acuarios al ecosistema natural 
 
-En 2011, realice un cambio estratégico: cursar una Maestría en Análisis Ambiental de Sistemas Hídricos (Ecohidrología). Esta decisión no fue fácil, pero significó un avance académico y me proporcionó herramientas para entender los sistemas acuáticos desde otro contexto. 
+En 2011, realicé un cambio importante: cursar una _Maestría en Análisis Ambiental de Sistemas Hídricos (Ecohidrología)_. Esta decisión no fue fácil, pero significó un avance académico y me proporcionó herramientas para entender los sistemas acuáticos desde otro contexto. 
 
-En este camino de aprendizaje y conocimientos inicie el Doctorado en ciencias naturales con un tema relacionado con la acuicultura, con el cual se complementa mi experiencia en acuarios y el aprendizaje en sistemas naturales. 
+En este camino de aprendizaje y conocimientos inicié el _Doctorado en ciencias naturales_ con una investigación en el campo de la acuicultura.
 
-El cambio fue transformador. El doctorado me proporcionó las herramientas científicas para entender no solo los sistemas acuáticos artificiales que había manejado durante años, sino también los ecosistemas naturales y su compleja dinámica. Mi tesis actual sobre la "Acuicultura ecológica" representa la síntesis perfecta entre mi experiencia práctica en manejo de sistemas acuáticos y el conocimiento científico formal.
+El cambio fue transformador. El doctorado me proporcionó las herramientas científicas para complementar mi experiencia en acuarios y estanques, con los ecosistemas naturales y su compleja dinámica. 
+
+>Mi tesis actual sobre la Acuicultura ecológica representa la síntesis perfecta entre mi experiencia práctica en manejo de sistemas acuáticos y el conocimiento científico formal.
 
 ## Aprendizajes y reflexiones
 
@@ -92,4 +96,4 @@ Mi trayectoria es la prueba de que la educación formal y la experiencia prácti
 
 ---
 
-*Vivian Yorojo Moreno es Licenciada en Biología y Química de la Universidad Santiago de Cali, Magister en Ecohidrología y candidata a Doctora en Ciencias Naturales de la Universidad Nacional de La Plata. Su experiencia incluye más de 15 años en manejo de fauna silvestre y sistemas acuáticos en el Zoológico de Cali, participación en múltiples proyectos de investigación.*
+>Vivian Yorojo Moreno es Licenciada en Biología y Química de la Universidad Santiago de Cali, Magister en Ecohidrología y candidata a Doctora en Ciencias Naturales de la Universidad Nacional de La Plata. Su experiencia incluye más de 15 años en manejo de fauna y ecosistemas acuáticos.
