realice una modificación en el post de trayectoria

--- a/posts/2025-11-cv/index.qmd
+++ b/posts/2025-11-cv/index.qmd
@@ -22,7 +22,7 @@ Hace exactamente 30 años, mientras completaba mi bachillerato comercial en el I
 
 Lo que inició como un rol administrativo en la Clínica Veterinaria del Zoológico de Cali se transformó rápidamente en mi verdadera educación en **manejo de fauna y bienestar animal**. 
 
-Durante seis años no solo me encargué de la transcripción de historias clínicas de los animales (desde leones y tigrillos hasta aves nocturnas y reptiles), sino que me sumergí en un mundo que cambiaría el rumbo de mi vida profesional. 
+Durante seis me encargué de la transcripción de historias clínicas de los animales (desde leones y tigrillos hasta aves nocturnas y reptiles), sino que me sumergí en un mundo que cambiaría el rumbo de mi vida profesional. 
 
 El manejo de las historias clínicas y el cuidado de la fauna a mi cargo me dieron una comprensión profunda del manejo _ex situ_ y la complejidad de la conservación en cautiverio.
 
@@ -33,7 +33,7 @@ El manejo de las historias clínicas y el cuidado de la fauna a mi cargo me dier
 
 Mi trabajo diario me llevó a desarrollar habilidades que trascienden el simple manejo administrativo. Aprendí a preparar dietas especializadas, a realizar medidas y controles de peso, y hasta a manejar bases de radio de comunicación. 
 
->Pero lo más importante fue que desarrollé una comprensión profunda del bienestar animal y la importancia de la conservación.  
+>Pero lo más importante desarrollé una comprensión profunda del bienestar animal y la importancia de la conservación.  
 
 Durante este período, también tuve la oportunidad de coordinar las actividades de los cuidadores (zookeepers), lo que me dio una perspectiva integral sobre el manejo en cautiverio. 
 
