--- a/index.qmd
+++ b/index.qmd
@@ -24,11 +24,11 @@ comments: false
 
 ## Bio
 
-Investigadora y Consultora especializada en **Ecohidrología y Acuicultura Sustentable**. Mi misión es diseñar e implementar prácticas ecológicas para la conservación y producción optimizada de peces nativos, bajo un enfoque que equilibre la rentabilidad con la responsabilidad ambiental y social. Poseo vasta experiencia en el manejo experto de colecciones de organismos acuáticos en cautiverio. Promuevo activamente el papel de las mujeres en la acuicultura como motor de equidad y transformación hacia ecosistemas más saludables.
+Investigadora y Consultora especializada en **Ecohidrología y Acuicultura Sustentable**. Mi misión es diseñar e implementar prácticas ecológicas para la conservación y producción optimizada de peces nativos, bajo un enfoque que equilibre la responsabilidad ambiental y social. Poseo vasta experiencia en el manejo experto de colecciones de organismos acuáticos en cautiverio. Promuevo activamente el papel de las mujeres en la acuicultura como motor de equidad y transformación hacia ecosistemas más saludables.
 
 Utilizo la academia, la práctica, la experimentación y mi interés autodidacta como herramientas de aprendizaje para profundizar mi formación como profesional. Cuento con una **licenciatura en biología y química**, una **maestría en ecohidrología** y actualmente estoy realizando el **doctorado en ciencias naturales** sobre la implementación de la acuicultura ecológica de una especie nativa. 
 
-En este sitio encontraras algo sobre mi trayectoria [publicaciones](https://vyorojo.rbind.io/publicaciones/), [proyectos](https://vyorojo.rbind.io/cv.pdf).   
+En este sitio encontraras algo sobre mi trayectoria [publicaciones](https://vyorojo.rbind.io/publicaciones/), [proyectos](https://vyorojo.rbind.io/proyectos/).   
 
 
 
