--- a/investigacion/index.qmd
+++ b/investigacion/index.qmd
@@ -3,40 +3,30 @@ title: "Investigación e intereses"
 format: html
 ---
 
-Me apasiona el estudio y la optimización de los sistemas acuícolas para garantizar la producción sostenible de peces, poniendo el foco en la calidad del agua y la eficiencia ecológica. Mi trayectoria profesional es reflejo de mis intereses. 
+Me apasiona el estudio de los sistemas acuícolas para garantizar la producción sostenible de peces. Mi trayectoria profesional es reflejo de mis intereses. 
 
 
+## Implementación de la acuicultura ecológico del pejerrey (AEP)
 
-## Acuicultura ecológica del pejerrey
-::: {layout-ncol=2}
-![](peje_ciclo_zoo.png){width=3.5in fig-align="left"}
-
-
-La acicultura ecológica del pejerrey (Odontesthes bonariensis) se enfoca en la producción de juveniles de pejerrey mediante el aprovechamiento de la producción natural del zooplancton en las lagunas pampeanas
-
-:::
-
-
-
-
-
-:::: {layout="[ 60, 40 ]"}
+:::: {layout="[ 40, 60 ]"}
 
 ::: {#first-column}
 ```r
-Acuicultura del pejerrey
+AEP
 
 ```
-La acicultura ecológica del pejerrey (Odontesthes bonariensis) se enfoca en la producción de juveniles de pejerrey mediante el aprovechamiento de la producción natural del zooplancton en las lagunas pampeanas
+Trabajo de tesis doctoral que se basa en la implementación de la acuicultura ecológica del pejerrey en jaulas flotantes [enlace](https://www.conicet.gov.ar/especialistas-del-conicet-trabajan-para-repoblar-de-pejerreyes-la-cuenca-del-plata/). Este método de cultivo tiene un enfoque ecosistémico, el cual reconoce que las personas son parte integral del ecosistema y deben estar en el centro de la gestión. 
 :::
 
 ::: {#second-column}
 
-![](peje_ciclo_zoo.png){width=3.5in fig-align="left"}
+![](pejerreyA.jpeg){width=3.5in fig-align="left"}
 :::
 
 ::::
 
 
 
+## Los datos detrás de la acuicultura
 
+La ciencia de datos no solo sirve para procesar números, sino para comprender la dinámica del medio acuático. Me interesa transformar la complejidad ambiental en claridad analítica, permitiendo que la toma de decisiones deje de basarse en la intuición y se fundamente en la evidencia rigurosa de los datos.
