modifique un dato del blog en mi página web

--- a/posts/2025-11-cv/index.qmd
+++ b/posts/2025-11-cv/index.qmd
@@ -20,7 +20,7 @@ Hace exactamente 30 años, mientras completaba mi bachillerato comercial en el I
 
 Lo que inició como un rol administrativo en la Clínica Veterinaria del Zoológico de Cali se transformó rápidamente en mi verdadera educación en **manejo de fauna y bienestar animal**. 
 
-Durante seis me encargué de la transcripción de historias clínicas de los animales (desde leones y tigrillos hasta aves nocturnas y reptiles), sino que me sumergí en un mundo que cambiaría el rumbo de mi vida profesional. 
+Durante seis años me encargué de la transcripción de historias clínicas de los animales (desde leones y tigrillos hasta aves nocturnas y reptiles), sino que me sumergí en un mundo que cambiaría el rumbo de mi vida profesional. 
 
 El manejo de las historias clínicas y el cuidado de la fauna a mi cargo me dieron una comprensión profunda del manejo _ex situ_ y la complejidad de la conservación en cautiverio.
 
@@ -39,7 +39,7 @@ Durante este período, también tuve la oportunidad de coordinar las actividades
 
 ## Hacia la coordinación del acuario
 
-En noviembre de 2001, se abrió una nueva puerta cuando asumí como Coordinadora del Acuario. Este cambio representó un desafío enorme que requirió no solo pasión, sino una serie de conocimientos técnicos para gestionar la colección de peces e invertebrados de agua dulce y marinos.
+En noviembre de 2001, se abrió una nueva puerta cuando asumí como Coordinadora del Acuario del Zoológico de Cali. Este cambio representó un desafío enorme que requirió no solo pasión, sino una serie de conocimientos técnicos para gestionar la colección de peces e invertebrados de agua dulce y marinos.
 
 La responsabilidad era abrumadora: nueve exhibiciones de agua dulce (incluyendo acuarios de hasta 40 metros cúbicos), once exhibiciones marinas, dos lagos de biodiversidad, y un complejo sistema de cuarentenas. 
 
@@ -115,7 +115,7 @@ Después de dos décadas en este campo, he aprendido que la conservación no es 
 
 Los estudios de posgrado me han mostrado que estos principios se aplican también a escala de paisaje. Los recursos hídricos no existen en aislamiento, sino que forman parte de sistemas dinámicos donde los componentes bióticos y abióticos interactúan de maneras complejas y fascinantes.
 
-Mi trayectoria es la prueba de que la educación formal y la experiencia práctica se complementan de manera poderosa, creando una base sólida para enfrentar los desafíos futuros de la conservación acuática.
+Mi trayectoria es la prueba de que la capacitación continua, la educación académica y la experiencia práctica se complementan de manera poderosa, creando una base sólida para enfrentar los desafíos futuros en la investigación y conservación de recursos acuáticos.
 
 
 ---
